--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.container-fluid{
+  background-color: hsl(212, 45%, 89%);
+  height: 100vh;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.Smallcontainer{
+  width: 300px;
+  background-color: white;
+  border-radius: 15px;
+  padding: 15px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+.img-fluid{
+  border-radius: 15px;
+  margin-bottom: 20px;
+}
+*{
+  font-family: 'Outfit', sans-serif;
+  font-size: 15px
+}
+.small-text{
+  color: hsl(216, 15%, 48%);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.big-text{
+  color: hsl(218, 44%, 22%);
+  font-size: 20px;
 }
