--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,20 @@
 .container-fluid{
   background-color: hsl(212, 45%, 89%);
   height: 100vh;
+  padding:0;
   align-items: center;
 }
 .Smallcontainer{
-  width: 300px;
+  width: 320px;
   background-color: white;
-  border-radius: 15px;
-  padding: 15px;
+  margin:0;
+  border-radius: 20px;
+  padding: 16px;
+  padding-bottom: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 .img-fluid{
-  border-radius: 15px;
+  border-radius: 10px;
   margin-bottom: 20px;
 }
 *{
@@ -19,10 +22,24 @@
   font-size: 15px
 }
 .small-text{
+  padding: 1px 20px 1px 20px;
   color: hsl(216, 15%, 48%);
 }
 
 .big-text{
+  padding: 0px 20px 10px 20px;
+  margin:0;
+  font-weight: bold;
   color: hsl(218, 44%, 22%);
   font-size: 20px;
+}
+
+@media screen and (max-width: 300px) {
+  .Smallcontainer{
+    width: 100%;
+    box-shadow: none;
+  }
+  .big-text{
+    font-size: 15px;
+  }
 }
